feature/ASE-119: Minor fixes