@@ -7,8 +7,8 @@ import com.bloxico.ase.userservice.repository.evaluation.CountryEvaluationDetail
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static com.bloxico.ase.testutil.Util.allPages;
 import static com.bloxico.ase.testutil.Util.genUUID;
@@ -78,7 +78,7 @@ public class EvaluationFacadeImplTest extends AbstractSpringTestWithAWS {
     public void searchCountryEvaluationDetails_withRegions() {
         var region1 = utilLocation.savedRegion();
         var region2 = utilLocation.savedRegion();
-        var regionsFilter = Arrays.asList(region1.getName(), region2.getName());
+        var regionsFilter = List.of(region1.getName(), region2.getName());
         var request = utilEvaluation.genSearchCountryEvaluationDetailsRequest(regionsFilter);
         var c1 = utilEvaluation.savedCountryEvaluationDetailsCountedProjWithRegion(region1);
         var c2 = utilEvaluation.savedCountryEvaluationDetailsCountedProjWithRegion(region2);
@@ -111,7 +111,7 @@ public class EvaluationFacadeImplTest extends AbstractSpringTestWithAWS {
     public void searchCountryEvaluationDetails_forManagement_withRegions() {
         var region1 = utilLocation.savedRegion();
         var region2 = utilLocation.savedRegion();
-        var regionsFilter = Arrays.asList(region1.getName(), region2.getName());
+        var regionsFilter = List.of(region1.getName(), region2.getName());
         var request = utilEvaluation.genSearchCountryEvaluationDetailsForManagementRequest(regionsFilter);
         var c1 = utilEvaluation.savedCountryEvaluationDetailsCountedProjWithRegion(region1);
         var c2 = utilEvaluation.savedCountryEvaluationDetailsCountedProjNoDetailsWithRegion(region2);
